packaging-tutorial (0.6) unstable; urgency=low

  * Explain -us -uc when building packages.
  * Mention dch -i.
  * Explain how to install build-deps using mk-build-deps.
  * Explain how to unpack the source with dpkg-source -x.
  * Improve title of VCS slide.
  * Give example of package adoption.
  * update po files
  * update date in document
  * update po files

 -- Lucas Nussbaum <lucas@debian.org>  Mon, 09 Apr 2012 22:32:06 +0200

packaging-tutorial (0.5) unstable; urgency=low

  [ Lucas Nussbaum ]
  * Minor updates to french translation during preparation for Capitole du
    Libre 2011.
  * Add a debian/rules target to regenerate the version and the date in the
    document.
  * Use newer version of grep with recent debian/ubuntu releases due to the ld
    --as-needed change.
  * Do not mention patch-tracker twice.
  * New practical session on gem2deb-based Ruby packaging.
  * Add slide on backports.
  * Initial import of spanish translation.

  [ Cédric Boutillier ]
  * Use changelog to determine automatically date and version
  * Update French translation
  * Add subsection for answer to practical session 4
  * Update POT file
  * (fr) proofread [Thomas Vincent]

 -- Lucas Nussbaum <lucas@debian.org>  Sat, 14 Jan 2012 07:59:53 +0100

packaging-tutorial (0.4) unstable; urgency=low

  [ David Prévot ]
  * po4a configuration for the translation process

  [ Cédric Boutillier ]
  * add French translation
  * update debian/rules to translate documents at build time

 -- Lucas Nussbaum <lucas@debian.org>  Tue, 18 Oct 2011 07:27:33 +0200

packaging-tutorial (0.3) unstable; urgency=low

  * Merge practical sessions answers into the main document.

 -- Lucas Nussbaum <lucas@debian.org>  Fri, 26 Aug 2011 12:57:56 +0200

packaging-tutorial (0.2) unstable; urgency=low

  * Improvements after tutorial at RMLL 2011:
    + Use apt-get build-dep to install dash's build dependencies
      (works on Ubuntu too)
    + Use --no-install-recommends when installing devscripts